# snake-game

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  README.md  RenderingEngine.cpp  RenderingEngine.h  Settings.cpp  Settings.h  Singleton.h  Snake.cpp  Snake.h  Utilities.h  main.cpp
